Update Setting-Lab-Environment.md